--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Muhammad Ahmad",
-  "name": "Muhammad Ahmad portfolio",
+  "short_name": "Desmond Obisi",
+  "name": "Desmond Obisi portfolio",
   "icons": [
     {
       "src": "favicon.ico",
